--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ scikit-learn==1.1.1
 scipy==1.8.1
 sklearn==0.0
 threadpoolctl==3.1.0
-torch==1.12.0+cu116
-torchvision==0.13.0+cu116
+torch==1.12.0
+torchvision==0.13.0
 tqdm==4.64.0
 typing-extensions==4.3.0
 urllib3==1.26.9
